--- a/Python notebooks/Lecture 5/Functions-and-apis.ipynb
+++ b/Python notebooks/Lecture 5/Functions-and-apis.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -248,6 +248,9 @@
       "    The Greet function accept a language among \"es\" or \"fr\".\n",
       "    It prints a greeting message int that language.\n",
       "    If the given language is something else, it will print an English greeting\n",
+      "    \n",
+      "    parameter:\n",
+      "    lang:\n",
       "\n"
      ]
     }
@@ -285,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -432,16 +435,16 @@
       "text/plain": [
        "[{'first': 'Grace', 'last': 'Hopper', 'YOB': 1906},\n",
        " {'first': 'Alan', 'last': 'Turing', 'YOB': 1912},\n",
-       " {'first': 'Guido', 'last': 'Vam Rossum', 'YOB': 1956}]"
+       " {'first': 'Guido', 'last': 'Van Rossum', 'YOB': 1956}]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = [{'first': 'Guido' , 'last' : 'Vam Rossum' , 'YOB' : 1956},\n",
+    "data = [{'first': 'Guido' , 'last' : 'Van Rossum' , 'YOB' : 1956},\n",
     "        {'first': 'Grace' , 'last' : 'Hopper' , 'YOB' : 1906},\n",
     "        {'first': 'Alan' , 'last' : 'Turing' , 'YOB' : 1912}]\n",
     "\n",
@@ -458,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
