fluid simulator removed

--- a/Python notebooks/OOP/Student-class-exercise.ipynb
+++ b/Python notebooks/OOP/Student-class-exercise.ipynb
@@ -9,9 +9,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Student('Alice', 20, 'Computer Science', ID: 0)\n"
+     ]
+    }
+   ],
    "source": [
     "import ClassExamples as ce\n",
     "\n",
@@ -23,9 +31,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Schulich Student: Student('Bob', 21, 'ESE', ID: 1001)\n"
+     ]
+    }
+   ],
    "source": [
     "bob = ce.SSE_student(\"Bob\", 21, \"ESE\")\n",
     "print(bob)"
@@ -33,20 +49,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "bob.__class__.ID_Number"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "alice.__class__.ID_Number"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Code Improvements\n",
+    "- Improve the defined classes to mask the member variables of the classes by making them private\n",
+    "- Create setter and getter functions for your private member functions\n",
+    "- Modify the SSE student class variable for ID number to reflect SSE student number separately from all students while keeping track of the total number of students"
    ]
   },
   {
@@ -73,7 +121,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.1"
   },
   "orig_nbformat": 4
  },
