--- a/Python notebooks/OOP/Object-Oriented-Programming.ipynb
+++ b/Python notebooks/OOP/Object-Oriented-Programming.ipynb
@@ -266,9 +266,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "created\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['__module__',\n",
+       " '__init__',\n",
+       " '__dict__',\n",
+       " '__weakref__',\n",
+       " '__doc__',\n",
+       " '__new__',\n",
+       " '__repr__',\n",
+       " '__hash__',\n",
+       " '__str__',\n",
+       " '__getattribute__',\n",
+       " '__setattr__',\n",
+       " '__delattr__',\n",
+       " '__lt__',\n",
+       " '__le__',\n",
+       " '__eq__',\n",
+       " '__ne__',\n",
+       " '__gt__',\n",
+       " '__ge__',\n",
+       " '__reduce_ex__',\n",
+       " '__reduce__',\n",
+       " '__getstate__',\n",
+       " '__subclasshook__',\n",
+       " '__init_subclass__',\n",
+       " '__format__',\n",
+       " '__sizeof__',\n",
+       " '__dir__',\n",
+       " '__class__']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "class emptyshell():\n",
     "    def __init__(self):\n",
@@ -280,9 +324,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Student name: Maan Khedr\n",
+      "Student age: 38\n",
+      "Student name: Maan Khedr\n",
+      "Student age: 30\n",
+      "Student name: Maan Khedr\n",
+      "Student age: 30\n"
+     ]
+    }
+   ],
    "source": [
     "class student:\n",
     "    \"\"\"A class representing a student \"\"\"\n",
